--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,29 +6,29 @@
 #    By: klimayll <klimayll@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/16 19:15:11 by klimayll          #+#    #+#              #
-#    Updated: 2024/09/28 20:43:25 by klimayll         ###   ########.fr        #
+#    Updated: 2024/09/30 20:10:31 by klimayll         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
-CC = gcc
-CFLAGS = -Wall -Wextra -Werror -c
+CC = cc
+CFLAGS = -Wall -Wextra -Werror
 
-SRCS = ft_striteri ft_isalpha ft_isdigit ft_isalnum ft_isascii ft_isprint ft_strlen ft_memset ft_bzero ft_memcpy ft_memmove ft_strlcpy ft_strlcat ft_toupper ft_tolower ft_strchr ft_strrchr ft_strncmp ft_memchr ft_memcmp ft_strnstr ft_atoi ft_calloc ft_strdup ft_substr ft_strjoin ft_strtrim ft_split ft_itoa ft_putchar_fd ft_putstr_fd ft_putendl_fd ft_putnbr_fd ft_strmapi
-BONUSSRC = ft_lstmap_bonus ft_lstnew_bonus ft_lstadd_front_bonus ft_lstsize_bonus ft_lstlast_bonus ft_lstadd_back_bonus ft_lstdelone_bonus ft_lstclear_bonus ft_lstiter_bonus
+SRCS = ft_striteri.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_strmapi.c
+BONUSSRC = ft_lstmap_bonus.c ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c
 
 OBJS = $(SRCS:.c=.o)
 BONUSOBJ = $(BONUSSRC:.c=.o)
 
-INCLUDE = libft.h
+INCLUDE = -I .
 
 all: $(NAME)
 $(NAME): $(OBJS)
-	ar -rc $(NAME) $(OBJS)
+	ar -rcs $(NAME) $(OBJS)
 bonus: $(OBJS) $(BONUSOBJ)
-	ar -rc $(NAME) $(OBJS) $(BONUSOBJ)
-%.c%.o: $(INCLUDE)
-	${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
+	ar -rcs $(NAME) $(OBJS) $(BONUSOBJ)
+%.o: %.c
+	${CC} ${CFLAGS} ${INCLUDE} -c $< -o $@
 clean:
 	rm -f $(OBJS)
 fclean: clean
