--- a/printf/Makefile
+++ b/printf/Makefile
@@ -14,9 +14,9 @@ NAME = libftprintf.a
 
 CC = cc
 
-CFLAGS = -Wall -Werror -Wextra -c
+CFLAGS = -Wall -Werror -Wextra
 
-SRCS = ft_printf ft_printf_utils ft_print_char ft_print_string ft_print_number
+SRCS = ft_printf.c ft_printf_utils.c ft_putchar.c ft_putstr.c ft_putnbr.c
 
 OBJS = $(SRCS:.c=.o)
 
@@ -24,19 +24,14 @@ INCLUDE = ft_printf.h
 
 
 all: $(NAME)
-
 $(NAME) : $(OBJS)
-	ar -rc $(NAME) $(OBJS)
-
+	ar -rcs $(NAME) $(OBJS)
 %.c%.o: $(INCLUDE)
-	$(CC) $(CFLAGS) -c $< -o ${<:.c=.o}
-
+	$(CC) $(CFLAGS) -c $< -o $@
 clean:
 	rm -f $(OBJS)
-
 fclean:	clean
 	rm -f $(NAME)
-
 re: fclean all
 
 .PHONY: all clean fclean re
